# lavish-compiler

./: .gitignore  .travis.yml  Cargo.toml  README.md
docs/: ideas.md
lavish/: Cargo.toml
lavish-rpc/: Cargo.toml
lavish-rpc/src/: error.rs  lib.rs  message.rs  system.rs
lavish-rpc/src/system/: codec.rs
lavish/src/: ast.rs  main.rs  printer.rs
lavish/src/checker/: mod.rs  noredef.rs
lavish/src/codegen/: mod.rs  rust.rs
lavish/src/codegen/rust/: ir.rs  mod.rs  output.rs
lavish/src/parser/: errors.rs  mod.rs  span.rs
lavish/src/parser/tests/: build_remote.lavish  fn_namespaced.lavish  fn_simple.lavish  struct_cookie.lavish  struct_incomplete.lavish  target_rust.lavish
samples/: double.lavish  login.lavish  redef.lavish  test.lavish
scripts/: run-tests.sh  tests.sh
src/: ast.rs  main.rs  parser.rs  printer.rs
src/ast/: anchored.rs  mod.rs  nodes.rs
src/checker/: convos.rs  mod.rs  noredef.rs  print.rs
src/codegen/: mod.rs  output.rs  prelude.rs  rust.rs
src/codegen/rust/: ir.rs  lang.rs  mod.rs  output.rs  prelude.rs
src/codegen/rust/ir/: ast_ext.rs  client.rs  common.rs  handler.rs  lang.rs  mod.rs  pair.rs  protocol.rs  router.rs  symbols.rs  types.rs
src/parser/: errors.rs  mod.rs  span.rs
src/parser/tests/: build_local.lavish  enums.lavish  fn_nested.lavish  fn_simple.lavish  nf_simple.lavish  struct_comments.lavish  target_go.lavish  target_unknown.lavish
tests/: go.mod  go.sum  main.go
tests/codegen/: data.lavish
tests/codegen-tests/bytes/src/: main.rs
tests/codegen-tests/bytes/src/services/: lavish-rules  test.lavish
tests/codegen-tests/complex-types/src/: main.rs
tests/codegen-tests/data/src/: main.rs
tests/codegen-tests/deep-paths/src/: lavish-rules  main.rs
tests/codegen-tests/double/src/: main.rs  test.lavish
tests/codegen-tests/down-structs/src/: main.rs
tests/codegen-tests/enums/src/: main.rs  test.lavish
tests/codegen-tests/structs/src/: main.rs  test.lavish
tests/codegen-tests/timestamp/src/: main.rs
tests/codegen-tests/up-structs/src/: main.rs
tests/compliance/rust_compliant/: Cargo.toml
tests/compliance/rust_compliant/src/: client.rs  lavish-rules  main.rs  server.rs
tests/compliance/schema/: compliance.lavish
tests/compliance/ts_compliant/: client.ts  index.ts  package-lock.json  package.json  server.ts
tests/integration-tests/rust/: mod.rs
tests/integration-tests/schema/: integration.lavish
tests/integration/rust/: lavish-rules
tests/integration/rust/integration/: mod.rs
tests/lavish-test-runner/: Cargo.toml
tests/lavish-test-runner/src/: main.rs
tests/templates/: Cargo.toml.template
(+9 files in other folders)
