[package]
name = "lavish-rpc"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.91"
rmp-serde = "0.13.7"
erased-serde = "0.3.9"
serde_derive = "1.0.91"
futures-preview = "0.3.0-alpha.16"
futures_codec = "0.2.2"
romio = "0.3.0-alpha.8"
bytes = "0.4.12"
chrono = "0.4.6"
log = "0.4.6"

[dev-dependencies]
serde_bytes = "0.11.1"
